--- a/source/Playnite/Common.config
+++ b/source/Playnite/Common.config
@@ -1,9 +1,9 @@
 ﻿<appSettings>
-  <add key="UpdateUrl" value="http://localhost/update/{0}/info.json" />
-  <add key="UpdateUrl2" value="http://localhost:8081/update/{0}/info.json" />
-  <add key="ServicesUrl" value="http://localhost:5000/" />
+  <add key="UpdateUrl" value="http://www.playnite.link/update/{0}/info.json" />
+  <add key="UpdateUrl2" value="http://api.playnite.link/update/{0}/info.json" />
+  <add key="ServicesUrl" value="http://api.playnite.link/api" />
   <add key="UpdateBranch" value="stable" />
-  <add key="ThrowAllErrors" value="True" />
-  <add key="OfflineMode" value="True" />
+  <add key="ThrowAllErrors" value="False" />
+  <add key="OfflineMode" value="False" />
   <add key="PipeEndpoint" value="net.pipe://localhost/PlaynitePipe" />
 </appSettings>
